nginx/mi-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio
spec:
  selector:
    app: mi-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
# kubectl create service clusterip mi-servicio --tcp=80:8080
