nginx/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-contenedor
          image: nginx:latest
          ports:
            - containerPort: 80
# este servicio expone el contenedor al exterior
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 8080
      targetPort: 80
  selector:
    app: nginx
