nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx002
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx002
              servicePort: 8081
